[package]
name = "simp-tasks"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
## async
tokio = { workspace = true, features = ["sync", "rt"] }
tracing-futures = "0.2"
futures-util.workspace = true

## misc
tracing.workspace = true
thiserror.workspace = true
dyn-clone = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }